--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
 #root {
-    background-color: antiquewhite;
+    background-color: rgba(215, 71, 237, 0.805);
+    height: 100vh;
+    max-width: 100vw;
 }
