--- a/client/src/components/styles/Layout.css
+++ b/client/src/components/styles/Layout.css
@@ -7,3 +7,20 @@
   background-color: aquamarine;
   justify-content: space-between;
 }
+
+main {
+  margin: 0;
+}
+
+.error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.error h2 {
+  font-size: 40px;
+  color: black;
+  padding: 25px;
+  background-color: red;
+}
