--- a/client/src/components/styles/Home.css
+++ b/client/src/components/styles/Home.css
@@ -1,3 +1,8 @@
+main {
+  display: grid;
+  justify-items: center;
+}
+
 .home {
   background-color: rgba(19, 0, 223, 0.899);
   min-height: 91.4vh;
