fixed css from "post by id"

--- a/client/src/components/styles/PostById.css
+++ b/client/src/components/styles/PostById.css
@@ -1,3 +1,7 @@
+.PostById {
+  display: grid;
+  justify-items: center;
+}
 #root {
     background-color: rgba(223, 141, 0, 0.899);
     min-height: 91.4vh;
