--- a/client/src/components/styles/application-layout/Slogan.css
+++ b/client/src/components/styles/application-layout/Slogan.css
@@ -1,4 +1,70 @@
-.nav-menu p {
+.Slogen {
+  display: inline-block;
+  text-align: center;
+  line-height: 60px;
+  text-align: center;
+  position: relative;
+  padding: 0 48px;
   font-weight: 600;
-  padding: 30px;
+  font-size: 1.5em;
+  color: #1a0188;
 }
+
+.Slogen:before,
+.Slogen:after {
+  content: "";
+  display: block;
+  width: 15px;
+  height: 15px;
+  background: currentColor;
+  position: absolute;
+  animation: load 1.5s infinite alternate ease-in-out;
+  top: 0;
+  color: rgb(1, 79, 26);
+}
+
+.Slogen:after {
+  top: auto;
+  color: rgb(255, 64, 0);
+  bottom: 0;
+}
+
+@keyframes load {
+  0% {
+    left: 0;
+    height: 43px;
+    width: 15px;
+    transform: translateX(0)
+  }
+
+  50% {
+    height: 10px;
+    width: 40px
+  }
+
+  100% {
+    left: 100%;
+    height: 43px;
+    width: 15px;
+    transform: translateX(-100%)
+  }
+}
+
+/* .Slogen{
+        font-size: 1.5em;
+        color: #FFF;
+        display: inline-block;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 650;
+        position: relative;
+      }
+      .Slogen:after{
+        content: '';
+        height: 4px;
+        width:0%;
+        display: block;
+        background: #FF3D00;
+        animation: 5s lineGrow linear infinite;
+      }
+      
+      @keyframes lineGrow {to{width: 100%;}} */
