--- a/client/src/components/styles/NewPost.css
+++ b/client/src/components/styles/NewPost.css
@@ -1,12 +1,12 @@
 .NewPost {
-    background-color: aqua;
+    background-color: rgb(255, 179, 0);
     height: 91.4vh;
     display: grid;
     align-items: center;
     justify-items: center;
 }
 
-.NewPost > form {
+.NewPost>form {
     height: 55%;
     background-color: rgba(176, 61, 61, 0.803);
     display: grid;
@@ -21,6 +21,7 @@
 .NewPost h2 {
     grid-column: 1/3;
     font-size: 35px;
+    color: rgb(172, 255, 128);
 }
 
 .NewPost #description {
@@ -29,4 +30,96 @@
 
 .NewPost button {
     grid-column: 1/3;
+    padding: 10px 15px;
+    background-color: #0d161b;
+    border: 1.5px solid green;
+    color: #FFF;
+    border-radius: 8px;
+}
+
+.NewPost .msg {
+    grid-column: 1/3;
+    color: yellow;
+    background-color: rgba(240, 248, 255, 0.226);
+    padding: 20px 40px;
+}
+
+.NewPost .loaderNewPost {
+    grid-column: 1/3;
+    position: relative;
+    width: 108px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.loaderNewPost::after,
+.loaderNewPost::before {
+    content: '';
+    display: inline-block;
+    width: 48px;
+    height: 48px;
+    background-color: #FFF;
+    background-image: radial-gradient(circle 14px, #0d161b 100%, transparent 0);
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    animation: eyeMove 10s infinite, blink 10s infinite;
+}
+
+@keyframes eyeMove {
+
+    0%,
+    10% {
+        background-position: 0px 0px
+    }
+
+    13%,
+    40% {
+        background-position: -15px 0px
+    }
+
+    43%,
+    70% {
+        background-position: 15px 0px
+    }
+
+    73%,
+    90% {
+        background-position: 0px 15px
+    }
+
+    93%,
+    100% {
+        background-position: 0px 0px
+    }
+}
+
+@keyframes blink {
+
+    0%,
+    10%,
+    12%,
+    20%,
+    22%,
+    40%,
+    42%,
+    60%,
+    62%,
+    70%,
+    72%,
+    90%,
+    92%,
+    98%,
+    100% {
+        height: 48px
+    }
+
+    11%,
+    21%,
+    41%,
+    61%,
+    71%,
+    91%,
+    99% {
+        height: 18px
+    }
 }
